# stm_app

./: .gitignore  CONTRIBUTOR_AGREEMENT.md  Cargo.toml  InRelease  README.md  build.md  rustfmt.toml
.github/workflows/: release.yaml  release.yml
assets/: config.json
assets/file-types/: cs.json  css.json  js.json  md.json  ps1.json  toml.json  ts.json
assets/munchers/: csharp.cs.json  csharp.csproj.json  js.json  powershell.json  python.py.json  rust.cargo.toml.json  rust.rs.json  sql.json  ts.json
assets/schemas/: file-type.json  muncher.json
distro/: README.md  index.txt
distro/msix/: build_win_all.ps1  bump_msix_build_number.ps1  cert_add_self_signed_to_root.ps1  cert_gen_self_signed.ps1  msix_generate.ps1  msix_install_locally.ps1  msix_install_locally_dev.ps1  stackmuncher_arm64.appinstaller  stackmuncher_x64.appinstaller  upload_win_all.ps1  upload_win_dev.ps1
distro/msix/manifest_arm64/: appxmanifest.xml
distro/msix/manifest_x64/: appxmanifest.xml
distro/ubuntu/: Release  build_release.sh  create_ppa.sh  stackmuncher.list  update_linux.sh
ppa/: README.md  build_windows.ps1  create_ppa.sh  index.txt  update.sh  update_linux.sh  upload_win_test.ps1  upload_windows.ps1
ppa/msix/: add_self_signed_cert_to_root.ps1  gen_self_signed_cert.ps1  generate_msix.ps1  stackmuncher.appinstaller
ppa/msix/content/: appxmanifest.xml
ppa/ubuntu/: InRelease  KEY.gpg  Packages  Release.gpg
samples/: full-git-log.txt  git_log_lambda.txt  git_log_stm.txt  submission.json  submitted_report.json  validation_gist.json
shell/: app_to_s3.sh  build_and_install.sh  stm_up.sh
src/: code_rules.rs  config.rs  file_type.rs  kwc.rs  lib.rs  main.rs  muncher.rs  report.rs  structures.rs  tech.rs
src/processors/: garbage.py  mod.rs  more-garbage.py  rubbish.py
stackmuncher/: Cargo.toml
stackmuncher/src/: app_args.rs  cmd_config.rs  cmd_munch.rs  code_rules.rs  config.rs  configure.rs  contributor.rs  git.rs  help.rs  lib.rs  main.rs  report.rs  signing.rs  submission.rs  tech.rs  utils.rs
stackmuncher/src/processors/: mod.rs
stackmuncher_lib/: Cargo.toml
stackmuncher_lib/src/: code_rules.rs  config.rs  contributor.rs  file_type.rs  git.rs  graphql.rs  ignore_paths.rs  kwc.rs  lib.rs  muncher.rs  report.rs  report_brief.rs  tech.rs  utils.rs
stackmuncher_lib/src/processors/: mod.rs
stackmuncher_lib/src/report/: commit_time_histo.rs  kwc.rs  mod.rs  overview.rs  report.rs  tech.rs
stackmuncher_lib/stm_rules/file_types/: cmake.json  cpp.json  cs.json  csproj.json  css.json  dockerfile.json  dockerignore.json  erb.json  go.json  haml.json  html.json  in.json  ipynb.json  java.json  js.json  jsx.json  kt.json  liquid.json  md.json  pgsql.json  pp.json  ps1.json  py.json  pyx.json  rakefile.json  rdoc.json  rs.json  rst.json  scss.json  sh.json  tf.json  toml.json  tsx.json  tt.json  txt.json  vue.json  yaml.json  yml.json
stackmuncher_lib/stm_rules/munchers/: cicd.appveyor.yml.json  cicd.circleci.yml.json  cicd.codecov.yml.json  cicd.github.yml.json  cicd.travis.yml.json  cmake.json  cpp.cpp.json  csharp.cs.json  csharp.csproj.json  css.json  docker.json  go.gopkg.toml.json  go.json  html.json  java.json  js.json  jupyter.json  kotlin.json  liquid.json  markdown.json  powershell.json  puppet.json  python.pyx.json  reactjs.json  restructured_text.rst.json  ruby.erb.json  ruby.haml.json  ruby.json  ruby.rdoc.json  rust.cargo.toml.json  rust.rs.json  scss.json  shell.json  terraform.json  ts.json  vuejs.json
stackmuncher_lib/stm_rules/schemas/: file-type.json
stm_rules/file_types/: csproj.json  scss.json  sql.json
stm_rules/munchers/: csharp.cs.json  markdown.json  rust.rs.json
stmapp/: Cargo.toml
stmapp/src/: main.rs
stmlib/: Cargo.toml
stmlib/src/: config.rs  lib.rs  muncher.rs  report.rs
test-files/: report1.json  report2.json
