[package]
name = "stackmuncher"
version = "0.1.0"
authors = ["rimutaka <max@onebro.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }