[package]
name = "stackmuncher"
version = "0.1.0"
authors = ["rimutaka <max@onebro.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
content_inspector = "0.2.4"
chrono = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"
log = "0.4"