[package]
name = "stackmuncher"
version = "0.1.3"
authors = ["rimutaka <max@onebro.me>"]
edition = "2018"
homepage = "https://stackmuncher.com"
repository = "https://github.com/stackmuncher/stm"
license = "GPL-3.0-or-later"
description = "A static code analysis app for reporting on amount and type of code produced by looking at git commits."


[dependencies]
stackmuncher_lib = { version = "0.2", path = "../stackmuncher_lib" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
cargo-deb = "1.29.2"
regex = "1.4"
path-absolutize = "3.0.10"
ring = "0.16.20"
bs58 = "0.4.0"
hyper = { version = "0.14.7", features = ["http2"] }
hyper-rustls = "0.22.1"
serde_json = "1.0.64"
flate2 = "1.0.20"
futures = "0.3.15"
pico-args = "0.4.2"


# See https://crates.io/crates/cargo-deb for details
[package.metadata.deb]
copyright = "2021, StackMuncher Ltd <info@stackmuncher.com>"
license-file = ["../LICENSE"]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  ["../target/release/stackmuncher", "usr/bin/", "755"],
  [
    "../stm_rules/file_types/*",
    "usr/share/stackmuncher/stm_rules/file_types/",
    "644",
  ],
  [
    "../stm_rules/munchers/*",
    "usr/share/stackmuncher/stm_rules/munchers/",
    "644",
  ],
]
