[package]
name = "stackmuncher"
version = "0.1.7"
authors = ["rimutaka <max@onebro.me>"]
edition = "2018"
homepage = "https://stackmuncher.com"
repository = "https://github.com/stackmuncher/stm_app"
license = "AGPL-3.0-or-later"
description = "A static code analysis app for reporting on amount and type of code produced by looking at git commits."


[dependencies]
stackmuncher_lib = { version = "0.2", path = "../stackmuncher_lib" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
cargo-deb = "1.30"
regex = "1.5"
path-absolutize = "3.0"
ring = "0.16"
bs58 = "0.4"
hyper = { version = "0.14", features = ["http2"] }
hyper-rustls = "0.22"
flate2 = "1.0"
futures = "0.3"
pico-args = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

# See https://crates.io/crates/cargo-deb for details
[package.metadata.deb]
copyright = "2021, StackMuncher Ltd <info@stackmuncher.com>"
license-file = ["../LICENSE"]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  [
    "../target/release/stackmuncher",
    "usr/bin/",
    "755",
  ]
]
